# ShockModern

./: .gitignore  CMakeLists.txt
ShockMac/: Shock Build Notes
ShockMac/Game Src/: AMAPLOOP.C  gameobj.c
ShockMac/Game Src/Headers/: objects.h
ShockMac/LIB/: MacHeaders.c
ShockMac/Libraries/2D/: 2D.make  CMakeLists.txt
ShockMac/Libraries/2D/Source/: bitmap.c  bitmap.h  chrsiz.c  chrwid.c  pal.c  strnsiz.c  strsiz.c  strwid.c
ShockMac/Libraries/2D/Source/Clip/: CLPLIN.C
ShockMac/Libraries/2D/Source/Flat 8/: fl8chfl8.c  fl8clear.c  fl8clin.c  fl8fl8.c  fl8fltr2.c  fl8g24.c  fl8gfl8.c  fl8gpix.c  fl8hfl8.c  fl8hlin.c  fl8lin.c  fl8mono.c  fl8ntrp2.c  fl8pix.c  fl8pnt.c  fl8rect.c  fl8rsd8.c  fl8slin.c  fl8slin.h  fl8vlin.c
ShockMac/Libraries/2D/Source/clip/: clpf24.c  clplin.c  clpmono.c  clpply.c  clppoly.c  clprect.c
ShockMac/Libraries/FIX/: CMakeLists.txt
ShockMac/Libraries/FIX/Source/: fix.h  fix_sqrt.c
ShockMac/Libraries/H/: CMakeLists.txt
ShockMac/Libraries/LG/: CMakeLists.txt
ShockMac/Libraries/UI/Source/: TEXTTOOL.C
